# react-translation-app

./: .env.local  .gitignore  .pdm-python  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
public/: index.html  manifest.json
src/: App.css  App.js  App.jsx  i18n.js  translation_service.py
src/components/: LandingPage.css  LandingPage.jsx  TranslationBox.css  TranslationBox.jsx  VoiceTranslator.jsx
